Implemented auto-seeding.

--- a/perl/spore-seeder-service.config
+++ b/perl/spore-seeder-service.config
@@ -8,4 +8,12 @@ address=entropy.2keys.io
 verify=True
 
 # How often spore-seeder should poll the server, in seconds.
+# This value is used when autoFill is False.
 pollInterval=5
+
+# Should seeder monitor the entropy reading and seed it when it is below a threshold.
+autoSeed=True
+
+# The threshold of entropy. Seeder will start to seed once entropy reading is
+# below this value.
+entropyThreshold=3800
