Re-implemented command line options.

--- a/perl/spore-seeder-service.config
+++ b/perl/spore-seeder-service.config
@@ -17,3 +17,7 @@ autoSeed=True
 # The threshold of entropy. Seeder will start to seed once entropy reading is
 # below this value.
 entropyThreshold=3800
+
+# Display verbose information
+verbose=True
+
