--- a/perl/spore-seeder-service-bsd.config
+++ b/perl/spore-seeder-service-bsd.config
@@ -12,7 +12,7 @@ verify=True
 pollInterval=180
 
 # Should seeder monitor the entropy reading and seed it when it is below a threshold.
-autoSeed=True
+autoSeed=False
 
 # The threshold of entropy. Seeder will start to seed once entropy reading is
 # below this value.
