--- a/perl_linux/spore-seeder.service
+++ b/perl_linux/spore-seeder.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=Spore Seeder
+Wants=network-online.target
+After=network.target network-online.target
 
 [Service]
 AmbientCapabilities=CAP_SYS_ADMIN
